Assess LightLoad: rejected, FixerUpper already holds this ground
LightLoad's distinctive feature -- avoiding zip rescans in
FilePackResources, PathPackResources and SharedZipFileAccess -- is the
same three classes FixerUpper's perf/resourcepacks feature already
patches, and Duty's builds a dedicated ZipPackIndex behind
double-checked locking rather than sorting every entry name into a list
to binary-search. Not a coincidence: FixerUpper is ModernFix, and
LightLoad ships compat.ModernFix* mixins to run alongside it. Its whole
feature list maps onto FixerUpper's.

Its hash caching is a net loss. Vanilla's Identifier.hashCode() is
31 * namespace.hashCode() + path.hashCode(), and String.hashCode()
already caches internally, so vanilla is a few inlined instructions.
Caching it costs four bytes on every Identifier -- hundreds of thousands
here -- to save a multiply and an add, which is the wrong direction after
a memory pass and under UseCompactObjectHeaders. The prototype-hash cache
taken from RecipeEssentials is worth it because it replaces a walk over a
whole component map; the test is what the cache replaces.

Thirteen of its 39 mixins are compat patches for AdAstra, CableFacades,
Lightspeed, ModernFix, ProbeJS, WaterMedia, FramedBlocks, Titanium,
TravelersBackpack, YACL and Embeddium. None of those is installed.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>